--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width", initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= title %></title>
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="Content/app.css" />
+    <link rel="stylesheet" href="./bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./Content/app.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -33,7 +33,7 @@
             <%} %>
 
             <a class="nav-link" href="/"
-              ><i class="fa fa-lg fa-home"></i> Home
+              ><i class="fa fa-globe-americas"></i>Home
               <span class="sr-only">(current)</span></a
             >
           </li>
@@ -45,7 +45,7 @@
             <%}%>
 
             <a class="nav-link" href="/about"
-              ><i class="fa fa-lg fa-info"></i> About</a
+              ><i class="fa fa-lg fa-map-marked"></i> About</a
             >
           </li>
 
@@ -56,7 +56,7 @@
             <%}%>
 
             <a class="nav-link" href="/products"
-              ><i class="fa fa-lg fa-briefcase"></i> Products</a
+              ><i class="fa fa-lg fa-plane-departure"></i> Products</a
             >
           </li>
 
@@ -67,7 +67,7 @@
             <%}%>
 
             <a class="nav-link" href="/services"
-              ><i class="fa fa-lg fa-birthday-cake"></i> Services</a
+              ><i class="fa fa-lg fa-cocktail"></i> Services</a
             >
           </li>
 
@@ -78,7 +78,7 @@
             <%}%>
 
             <a class="nav-link" href="/contact"
-              ><i class="fa fa-lg fa-phone"></i> Contact</a
+              ><i class="fa fa-lg fa-atlas"></i> Contact</a
             >
           </li>
         </ul>
@@ -105,8 +105,8 @@
       </div>
     </div>
 
-    <script src="jquery/dist/jquery.min.js"></script>
-    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="Scripts/app.js"></script>
+    <script src="./jquery/dist/jquery.min.js"></script>
+    <script src="./bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./Scripts/app.js"></script>
   </body>
 </html>
