--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,23 @@
 
   <!-- Content goes here --> 
 
-  <div class="container">
+ <!-- <div class="container">
     <div class="jumbotron">
       <h1 class="display-4"><%= title %></h1>
       <% if(title == "Contact") { %>
         <a class="btn btn-primary" href="/contact-list" role="button">Contact List</a>
       <% } %>
     </div>
+  </div> -->
+
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="display-4"><%= title %></h1>
+      <% if(title == "Favorite") { %>
+        <a class="btn btn-primary" href="/favorite-list" role="button">Favorite List</a>
+      <% } %>
+    </div>
   </div>
+
 
 <% include ./partials/footer.ejs %>
