--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,14 @@
 
   <!-- Content goes here --> 
 
- <!-- <div class="container">
+ <div class="container">
     <div class="jumbotron">
       <h1 class="display-4"><%= title %></h1>
       <% if(title == "Contact") { %>
         <a class="btn btn-primary" href="/contact-list" role="button">Contact List</a>
       <% } %>
-    </div>
-  </div> -->
 
-  <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4"><%= title %></h1>
-      <% if(title == "Favorite") { %>
+      <% if(title == "Favorites") { %>
         <a class="btn btn-primary" href="/favorite-list" role="button">Favorite List</a>
       <% } %>
     </div>
