--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,12 +43,12 @@
         </li>
 
 
-        <% if (title == "Products") { %>
+        <% if (title == "Favorites") { %>
         <li class="nav-item active">
           <% } else { %>
         <li class="nav-item">
           <% } %>
-          <a class="nav-link" href="/products"><i class="fa fa-lg fa-briefcase"></i> Products</a>
+          <a class="nav-link" href="/favorites"><i class="fa fa-lg fa-briefcase"></i> Favorites</a>
         </li>
 
 
