--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -7,6 +7,10 @@
     <div class="col-md-offset-3 col-md-6">
       <h1>
         <%= title %>
+        <br />
+        <a href="/contact-list/add" class="btn btn-primary"
+          ><i class="fa fa-plus"></i> Add a Contact
+        </a>
       </h1>
       <br />
       <table class="table table-bordered table-striped table-hover">
